@@ -1,3 +1,9 @@
+2008-08-02  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-spu.c (mark_overlay_section): Move code calculating
+	max_overlay_size to correct block.
+	(spu_elf_auto_overlay): Don't use %x in einfo error message.
+
 2008-08-01  Alan Modra  <amodra@bigpond.net.au>
 	    Jan Kratochvil  <jan.kratochvil@redhat.com>
 
